<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlRestaurantView"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivRestaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/restaurant_image"
            android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Restauran name"
            tools:textColor="@android:color/black" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/restaurant_rating"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlRestaurantView"
        tools:src="@drawable/stars_regular_5" />

    <TextView
        android:id="@+id/tvReviewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toRightOf="@+id/ivRating"
        app:layout_constraintTop_toBottomOf="@+id/rlRestaurantView"
        tools:text="123 reviews" />


    <TextView
        android:id="@+id/tvCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlRestaurantView"
        tools:text="$$" />

    <TextView
        android:id="@+id/tvHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRating"
        tools:text="hours of operation" />

    <TextView
        android:id="@+id/tvOpenToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCost"
        tools:text="Closed" />


    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/phone"
        android:gravity="center"
        android:text="@string/phone_no"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvDirection"
        app:layout_constraintTop_toBottomOf="@+id/tvHours" />

    <TextView
        android:id="@+id/tvDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/direction"
        android:gravity="center"
        android:text="@string/direction"
        app:layout_constraintLeft_toRightOf="@+id/tvPhoneNumber"
        app:layout_constraintRight_toLeftOf="@+id/tvWebsite"
        app:layout_constraintTop_toBottomOf="@+id/tvHours" />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/website"
        android:gravity="center"
        android:text="@string/website"
        app:layout_constraintLeft_toRightOf="@+id/tvDirection"
        app:layout_constraintRight_toLeftOf="@+id/tvReviews"
        app:layout_constraintTop_toBottomOf="@+id/tvHours" />

    <TextView
        android:id="@+id/tvReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/reviews"
        android:gravity="center"
        android:text="@string/reviews"
        app:layout_constraintLeft_toRightOf="@+id/tvWebsite"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHours" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
        tools:text="Some address" />


    <com.google.android.gms.maps.MapView
        android:id="@+id/mvRestaurantLocation"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

</android.support.constraint.ConstraintLayout>