<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRestaurantView"
    android:layout_width="match_parent"
    android:layout_height="200dp">


    <ImageView
        android:id="@+id/ivRestaurant"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/restaurant_image"
        android:scaleType="fitXY"
        tools:src="@mipmap/ic_launcher" />

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradient_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="$" />

        <TextView
            android:id="@+id/tvRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCost"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Restauran name" />

        <TextView
            android:id="@+id/tvFoodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRestaurantName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:textColor="@android:color/white"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRestaurantName"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/tvFoodType"
            android:text="@string/seperator"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRestaurantName"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/tvDot"
            android:textColor="@android:color/white"
            tools:text="0.2 miles" />

        <ImageView
            android:id="@+id/ivRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvDistance"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/tvDistance"
            android:layout_below="@id/tvRestaurantName"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/restaurant_rating"
            tools:src="@drawable/stars_regular_5" />


    </RelativeLayout>

</RelativeLayout>